--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  background-color: #1E1C21;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
